Base classes updated